test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-shared.chpl
//  lhs: shared!  rhs: shared?  error: nlb

class MyClass {
  var x: int;
}

var rhs: shared MyClass?;

var lhs: shared MyClass = rhs;
