test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-shared.good
init-var-nonnil-shared-from-oknil-shared.chpl:9: error: invalid copy-initialization
init-var-nonnil-shared-from-oknil-shared.chpl:9: error: cannot coerce 'shared MyClass?' to 'shared MyClass' in initialization
